--- a/tools/lab_book_1/lab_book_1.tex
+++ b/tools/lab_book_1/lab_book_1.tex
@@ -14,26 +14,26 @@
 % lab book.
 %
 % The \lipsum[#] commands throughout this template generate dummy text
-% to fill the template out. These commands should all be removed when
+% to fill the template out. These commands should all be removed when 
 % writing lab book content.
 %
-% HOW TO USE THIS TEMPLATE
+% HOW TO USE THIS TEMPLATE 
 % Each day in the lab consists of three main things:
 %
-% 1. LABDAY: The first thing to put is the \labday{} command with a date in
-% curly brackets, this will make a new page and put the date in big letters
+% 1. LABDAY: The first thing to put is the \labday{} command with a date in 
+% curly brackets, this will make a new page and put the date in big letters 
 % at the top.
 %
-% 2. EXPERIMENT: Next you need to specify what experiment(s) you are
-% working on with an \experiment{} command with the experiment shorthand
-% in the curly brackets. The experiment shorthand is defined in the
-% 'DEFINITION OF EXPERIMENTS' section below, this means you can
-% say \experiment{pcr} and the actual text written to the PDF will be what
-% you set the 'pcr' experiment to be. If the experiment is a one off, you can
-% just write it in the bracket without creating a shorthand. Note: if you don't
+% 2. EXPERIMENT: Next you need to specify what experiment(s) you are 
+% working on with an \experiment{} command with the experiment shorthand 
+% in the curly brackets. The experiment shorthand is defined in the 
+% 'DEFINITION OF EXPERIMENTS' section below, this means you can 
+% say \experiment{pcr} and the actual text written to the PDF will be what 
+% you set the 'pcr' experiment to be. If the experiment is a one off, you can 
+% just write it in the bracket without creating a shorthand. Note: if you don't 
 % want to have an experiment, just leave this out and it won't be printed.
 %
-% 3. CONTENT: Following the experiment is the content, i.e. what progress
+% 3. CONTENT: Following the experiment is the content, i.e. what progress 
 % you made on the experiment that day.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -44,14 +44,14 @@
 
 \documentclass[idxtotoc,hyperref,openany]{labbook} % 'openany' here removes the gap page between days, erase it to restore this gap; 'oneside' can also be added to remove the shift that odd pages have to the right for easier reading
 
-\usepackage[
+\usepackage[ 
   backref=page,
   pdfpagelabels=true,
   plainpages=false,
   colorlinks=true,
   bookmarks=true,
   pdfview=FitB]{hyperref} % Required for the hyperlinks within the PDF
-
+  
 \usepackage{booktabs} % Required for the top and bottom rules in the table
 \usepackage{float} % Required for specifying the exact location of a figure or table
 \usepackage{graphicx} % Required for including images
@@ -64,7 +64,7 @@
 %	DEFINITION OF EXPERIMENTS
 %----------------------------------------------------------------------------------------
 
-\newexperiment{example}{GBP Retail Sales m/m}
+\newexperiment{example}{This is an example experiment}
 \newexperiment{example2}{This is another example experiment}
 \newexperiment{example3}{This is yet another example experiment}
 \newexperiment{table}{This shows a sample table}
@@ -82,12 +82,12 @@
 \title{
 \begin{center}
 \HRule \\[0.4cm]
-{\Huge \bfseries Foreign Exchange Journal \\[0.5cm] \Large Notebook of Foreign Exchange}\\[0.4cm] % Degree
+{\Huge \bfseries Laboratory Journal \\[0.5cm] \Large Master of Science}\\[0.4cm] % Degree
 \HRule \\[1.5cm]
 \end{center}
 }
-\author{\Huge Ivan Chu \\ \\ \LARGE home158@gmail.com \\[2cm]} % Your name and email address
-\date{Beginning 21 May 2015} % Beginning date
+\author{\Huge John Smith \\ \\ \LARGE john@smith.com \\[2cm]} % Your name and email address
+\date{Beginning 6 February 2012} % Beginning date
 \maketitle
 
 \tableofcontents
@@ -246,4 +246,4 @@ $a^2 + b^2 = c^2$\\ \\
 
 %----------------------------------------------------------------------------------------
 
-\end{document} 
+\end{document}
